--- a/views/templates/albums-show.html
+++ b/views/templates/albums-show.html
@@ -28,26 +28,50 @@
                     </li>
 
                     <li class="list-group-item">
+
                       <h4 class="inline-header">Songs:</h4>
+
                         <div class="list-group-item" ng-repeat="song in albumsShowCtrl.album.songs">
 
-                          <button type="button" class="btn btn-info" aria-label="Left Align">
+
+                          <!-- Edit Button -->
+                          <button type="button" class="btn btn-info" ng-hide="editing" ng-click="editing = true" aria-label="Left Align">
                             <span class="glyphicon glyphicon-pencil" aria-hidden="true"></span>
                           </button>
 
+                          <button class='btn btn-success' ng-show="editing" ng-click="albumsShowCtrl.editSong(song); editing = false">
+                            <span class="glyphicon glyphicon-ok" aria-hidden="true"></span>
+                          </button>
+                          
+                          <!-- Delete Button -->
                           <button type="button" class="btn btn-danger" aria-label="Left Align" ng-click="albumsShowCtrl.deleteSong(song)">
                             <span class="glyphicon glyphicon-remove" aria-hidden="true"></span>
                           </button>
 
-                          <span> ({{song.trackNumber}}) {{song.name}} </span>
+                          <!-- Track Info -->
+                          <span> 
+                            <span ng-hide="editing">({{song.trackNumber}})</span> 
+                            <input ng-show="editing" ng-model="albumsShowCtrl.newSong.trackNumber" type="text" class="form-control input-md" required="">
+
+                            <span ng-hide="editing">{{song.name}}</span> 
+                            <input ng-show="editing" ng-model="albumsShowCtrl.newSong.name" type="text" class="form-control input-md" required="">
+
+                          </span>
+
                         </div>
+
                     </li>
+
+
                     <hr>
+
+
+                    <!-- Create New Song -->
 
                     <form class="form-horizontal" ng-submit="albumsShowCtrl.createSong()">
                       <fieldset>
 
-                        <!-- Create New Song -->
+                        
                         <!-- Form Name -->
                         <legend>Add New Song</legend>
 
